Mon May 17 06:19:45 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* common.mk (revision.h.tmp): use double quotes for Windows.
	  [ruby-core:30270]

Mon May 17 00:43:47 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* version.c (ruby_description): RUBY_REVISION_STR may be empty.
	  [ruby-core:30268]

Sun May 16 10:49:47 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/iconv/iconv.c (rb_iconv_sys_fail): fix number of arguments.
	  a patch by Masaya TARUI <tarui AT prx.jp>.

Sat May 15 17:16:15 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/iconv/iconv.c (rb_iconv_sys_fail): raise BrokenLibrary if
	  errno is not set.  [ruby-dev:41317]

Sat May 15 12:36:01 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* Makefile.in, common.mk, win32/Makefile.sub (REVISION_H): move
	  before the rule.

	* Makefile.in, common.mk, win32/Makefile.sub (revision.h): fix for
	  nmake.  [ruby-core:30249]

Tue May 11 22:51:11 2010  Tanaka Akira  <akr@fsij.org>

	* pack.c (pack_pack): call rb_quad_pack to preserve RangeError.

Tue May 11 05:37:19 2010  Tanaka Akira  <akr@fsij.org>

	* pack.c: backport integer pack/unpack from 1.9 for [ruby-core:21937].

	* configure.in: backport RUBY_DEFINT and fixed size integer checks.

	* ruby.h: include stdint.h if available.

	* bignum.c (rb_big_pack): defined..
	  (rb_big_unpack): defined.

	* intern.h (rb_big_pack): declared.
	  (rb_big_unpack): declared.

Mon May 10 15:48:28 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* regex.c (read_special): get rid of overrun.

Sun May  9 08:07:55 2010  Shugo Maeda  <shugo@ruby-lang.org>

	* lib/net/imap.rb: backported exception handling from trunk.
	  [ruby-core:29745]

Sat May  8 11:07:41 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/bigdecimal/bigdecimal.c (VpAlloc): ensure buf does not get
	  collected.  based on a patch masaya tarui at [ruby-dev:41213].

Fri May  7 11:31:50 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* instruby.rb (install-man): install mdocs directly without