@@ -1,3 +1,8 @@
+Wed May 19 23:36:57 2010  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>
+
+	* ext/tk/extconf.rb: [ruby-def:41334] [Bug #3307] invalid result
+	  on searching tcl.h/tk.h. Thanks, Masaya Tarui.
+
 Mon May 17 06:19:45 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* common.mk (revision.h.tmp): use double quotes for Windows.
